--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -39,6 +39,10 @@
 						<input id="password" value="" name="password" type="password" 
 						class="password form-control x319 in">
 					</div>
+					<div class="form-group" style="margin-left:80px;">
+						<input type="checkbox" id="rememberPs"/>
+						<label for="j_password" onclick="doJzmm()">记住密码</label> 
+					</div>
 					<!--<div class="form-group">
 						<label for="j_captcha" class="t">验证码：</label>
 						 <input id="j_captcha" name="j_captcha" type="text" class="form-control x164 in">
